tests/ui/crashes/ice-6250.stderr
error[E0601]: `main` function not found in crate `ice_6250`
  --> $DIR/ice-6250.rs:4:1
   |
LL | / pub struct Cache {
LL | |     data: Vec<i32>,
LL | | }
LL | |
...  |
LL | |     }
LL | | }
   | |_^ consider adding a `main` function to `$DIR/ice-6250.rs`

error[E0308]: mismatched types
  --> $DIR/ice-6250.rs:12:9
   |
LL |         Some(reference) = cache.data.get(key) {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to use pattern matching
   |
LL |         let Some(reference) = cache.data.get(key) {
   |         ^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0601.
For more information about an error, try `rustc --explain E0308`.
